--- a/client/src/JoinPopupWidget/JoinPopup.scss
+++ b/client/src/JoinPopupWidget/JoinPopup.scss
@@ -4,6 +4,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255,255,255,.4);
+  background: rgba(#ffffff,.4);
   z-index: 10;
 }
