first page looks just as it should be

--- a/client/src/CreateGameWidget/CreateGame.scss
+++ b/client/src/CreateGameWidget/CreateGame.scss
@@ -1,5 +1,15 @@
 :local(.CreateGame) {
   width: 100%;
-  margin: 50px 0 100px;
-  text-align: left;
+  box-sizing: border-box;
+  padding: 10px 30px;
+  text-align: center;
+  background: rgba(#0030aa, 1);
+  border-radius: 10px;
+  color: white;
+  font: 20px/25px sans-serif;
+  cursor: pointer;
+  transition: background .2s ease;
+  &:hover {
+    background: rgba(#0030aa, .8);
+  }
 }
