--- a/client/src/FooterWidget/Footer.scss
+++ b/client/src/FooterWidget/Footer.scss
@@ -5,4 +5,8 @@
   width: 100%;
   margin: -50px auto 0;
   text-align: left;
+  font: 10px/12px sans-serif;
+  box-sizing: border-box;
+  padding: 3px 0 0 0;
+  border-top: 1px solid #eeeeee;
 }
