--- a/client/src/LoaderWidget/Loader.scss
+++ b/client/src/LoaderWidget/Loader.scss
@@ -4,6 +4,12 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(30,30,255,.4);
-  z-index: 10;
+  background: rgba(#ffffff,.8);
+  z-index: 100;
+  div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
