--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -5,7 +5,7 @@ html, body {
   font-family: sans-serif;
   text-align: center;
   width: 100%;
-  min-height: 100wh;
+  min-height: 100vh;
 }
 
 #root{
@@ -16,6 +16,8 @@ html, body {
   height: 100%;
   box-sizing: border-box;
   padding-bottom: 50px;
+  position: relative;
+  min-height: 100vh;
 }
 
 .Coords{
