--- a/client/src/CreateGamePopupWidget/CreateGamePopup.scss
+++ b/client/src/CreateGamePopupWidget/CreateGamePopup.scss
@@ -1,5 +1,34 @@
 :local(.CreateGamePopup) {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  margin: 50px 0 100px;
-  text-align: left;
+  height: 100%;
+  background: rgba(#ffffff,.8);
+  z-index: 10;
+  .box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 30px;
+    border-radius: 10px;
+    border: 1px solid #eeeeee;
+    background: #ffffff;
+    .back {
+
+    }
+    .name {
+
+    }
+    .message {
+
+    }
+    .error {
+
+    }
+    .button {
+
+    }
+  }
 }
