--- a/client/src/JoinPopupWidget/JoinPopup.scss
+++ b/client/src/JoinPopupWidget/JoinPopup.scss
@@ -4,6 +4,31 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(#ffffff,.4);
+  background: rgba(#ffffff,.8);
   z-index: 10;
+  .box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 30px;
+    border-radius: 10px;
+    border: 1px solid #eeeeee;
+    background: #ffffff;
+    .back {
+
+    }
+    .name {
+
+    }
+    .message {
+
+    }
+    .error {
+
+    }
+    .button {
+
+    }
+  }
 }
