--- a/client/src/JoinPopupWidget/JoinPopup.scss
+++ b/client/src/JoinPopupWidget/JoinPopup.scss
@@ -22,9 +22,9 @@
       left: 5px;
       width: 50px;
       height: 20px;
-      background: url(./back.png) center center no-repeat;
+      background: url(../assets/back.png) center center no-repeat;
       opacity: 1;
-      transition: opacity .2s ease;
+      transition: opacity .8s linear .2s;
       cursor: pointer;
       &:hover {
         opacity: .8;
@@ -52,13 +52,14 @@
       font: 12px/30px sans-serif;
       padding: 5px 0;
       border-radius: 7px;
-      background: rgba(#0030aa, 1);
+      background: rgba(#5784bf, 1);
+      box-shadow: 0 3px 0 0 rgba(#000000,.1),inset 0 -3px 0 0 rgba(#000000,.1);
       cursor: pointer;
-      transition: background .2s ease;
+      transition: background .8s linear .2s;
       color: white;
       margin: 10px 1% 0;
       &:hover {
-        background: rgba(#0030aa, .8);
+        background: rgba(#5784bf, .8);
       }
     }
   }
