--- a/client/src/PublicGamesListWidget/PublicGamesList.scss
+++ b/client/src/PublicGamesListWidget/PublicGamesList.scss
@@ -5,11 +5,17 @@
   .game {
     margin: 5px 0;
     padding: 10px;
-    border: 1px solid #555555;
-    background: #eeeeee;
+    border: 1px solid rgba(#c9ddf2,.2);
+    background: rgba(#c9ddf2,.1);
     border-radius: 10px;
     position: relative;
     font: 12px/14px sans-serif;
+    transition: background .8s linear .2s, border-color .8s linear .2s, color .8s linear .2s;
+    &:hover{
+      background: rgba(#c9ddf2,.3);
+      border-color: rgba(#c9ddf2,.4);
+      color: #777;
+    }
     .label {
     }
     .owner {
@@ -39,21 +45,23 @@
         border-radius: 7px;
         padding: 5px;
         font: 10px/12px sans-serif;
-        background: #ffffff;
-        border: 1px solid #888888;
+        background: #fafcfe;
+        border-color: #f4f8fc;
+        color: #d16b00;
       }
     }
     .button{
       padding: 5px 20px;
       border-radius: 7px;
-      background: rgba(#0030aa, 1);
+      background: rgba(#5784bf, 1);
+      box-shadow: 0 3px 0 0 rgba(#000000,.1),inset 0 -3px 0 0 rgba(#000000,.1);
       cursor: pointer;
-      transition: background .2s ease;
+      transition: background .8s linear .2s;
       color: white;
       margin: 10px 0 0;
       display: inline-block;
       &:hover {
-        background: rgba(#0030aa, .8);
+        background: rgba(#5784bf, .8);
       }
     }
   }
