add sea. need to fix errors

--- a/client/src/CreateGamePopupWidget/CreateGamePopup.scss
+++ b/client/src/CreateGamePopupWidget/CreateGamePopup.scss
@@ -69,7 +69,7 @@
     }
     .error {
       font: 10px/12px sans-serif;
-      color: red;
+      color: #d16b00;
     }
     .button {
       display: inline-block;
