--- a/client/src/JoinPopupWidget/JoinPopup.scss
+++ b/client/src/JoinPopupWidget/JoinPopup.scss
@@ -43,7 +43,7 @@
     }
     .error {
       font: 10px/12px sans-serif;
-      color: red;
+      color: #d16b00;
     }
     .button {
       display: inline-block;
