--- a/client/src/SeaWidget/Sea.scss
+++ b/client/src/SeaWidget/Sea.scss
@@ -1,54 +1,97 @@
-.Sea{
-  font: 0px/0px sans-serif;
-}
-.SeaLine{
+:local(.Sea){
   display: inline-block;
-  vertical-align: top;
-}
-.Cell{
-  width: 20px;
-  height: 20px;
-}
-.Cell.empty{
-  background: transparent url('./empty.png') center center;
-}
-.Cell.miss{
-  background: transparent url('./miss.png') center center;
-}
-.Cell.ship{
-  background: transparent url('./ship.png') center center;
-}
-.Cell.hit{
-  background: transparent url('./hit.png') center center;
-}
-.Cell.light{
-  background-color: rgba(255, 255, 0, .2);
-}
-.Cell:hover, .Cell.current {
-  background-color: rgba(255, 255, 0, .6);
-}
-.Label{
-  display: block;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  font: bold 14px/20px sans-serif;
-}
+  margin: 0 20px 20px;
+  h3{
+    margin: 5px auto 5px;
+    text-align: center;
+  }
+  .Sea{
+    font: 0px/0px sans-serif;
+  }
+  .SeaLine{
+    display: inline-block;
+    vertical-align: top;
+  }
+  .Cell{
+    width: 20px;
+    height: 20px;
+    &.empty{
+      background: transparent url('./empty.png') center center;
+    }
+    &.miss{
+      background: transparent url('./miss.png') center center;
+    }
+    &.ship{
+      background: transparent url('./ship.png') center center;
+    }
+    &.hit{
+      background: transparent url('./hit.png') center center;
+    }
+    &.wait{
+      background: transparent url('./wait.png') center center;
+    }
+    &.light{
+      background-color: rgba(255, 255, 0, .2);
+    }
+    &:hover, &.current {
+      background-color: rgba(255, 255, 0, .6);
+    }
+  }
+  .Label{
+    display: block;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    font: bold 14px/20px sans-serif;
+  }
 
-.Label.empty{
-  background: transparent url('./label-empty.png') center center;
-}
+  .Label.empty{
+    background: transparent url('./label-empty.png') center center;
+  }
 
-.Label.x{
-  background: transparent url('./label-x.png') center center;
-}
+  .Label.x{
+    background: transparent url('./label-x.png') center center;
+  }
 
-.Label.y{
-  background: transparent url('./label-y.png') center center;
-}
+  .Label.y{
+    background: transparent url('./label-y.png') center center;
+  }
 
-.Label.active{
-  color: red;
-  font: bold 16px/20px sans-serif;
-  background-color: rgba(255, 255, 0, .2);
+  .Label.active{
+    color: red;
+    font: bold 16px/20px sans-serif;
+    background-color: rgba(255, 255, 0, .2);
+  }
+  .bottom-block{
+    position: relative;
+    height: 60px;
+    width: 100%;
+    .message{
+      position: absolute;
+      top: 5px;
+      left: 50%;
+      transform: translateX(-50%);
+      font: 10px/12px sans-serif;
+      color: #d16b00;
+    }
+    .send{
+      position: absolute;
+      top: 22px;
+      left: 50%;
+      transform: translateX(-50%);
+      box-sizing: border-box;
+      font: 12px/30px sans-serif;
+      padding: 0 10px;
+      border-radius: 7px;
+      background: rgba(#5784bf, 1);
+      box-shadow: 0 3px 0 0 rgba(#000000,.1),inset 0 -3px 0 0 rgba(#000000,.1);
+      cursor: pointer;
+      transition: background .8s linear .2s;
+      color: white;
+      margin: 0;
+      &:hover {
+        background: rgba(#5784bf, .8);
+      }
+    }
+  }
 }
