--- a/client/src/SeaWidget/Sea.scss
+++ b/client/src/SeaWidget/Sea.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   margin: 0 20px 20px;
   h3{
-    margin: 5px auto 5px;
+    margin: 5px auto 15px;
     text-align: center;
   }
   .Sea{
@@ -73,6 +73,7 @@
       transform: translateX(-50%);
       font: 10px/12px sans-serif;
       color: #d16b00;
+      white-space: nowrap;
     }
     .send{
       position: absolute;
