add colors to chat. No you will se when you hit, miss or sank

--- a/client/src/ChatWidget/Chat.scss
+++ b/client/src/ChatWidget/Chat.scss
@@ -46,6 +46,16 @@
       }
       .text {
         display: inline-block;
+        &.hit {
+          color: #d16b00;
+        }
+        &.miss {
+          color: #000000;
+        }
+        &.sank {
+          color: #d16b00;
+          font-weight: bold;
+        }
       }
     }
   }
