spaces in chat, fix copy for iOS, fix rules in create game popup for mobile

--- a/client/src/ChatWidget/Chat.scss
+++ b/client/src/ChatWidget/Chat.scss
@@ -43,6 +43,7 @@
       .name {
         display: inline-block;
         font-weight: bold;
+        margin-right: 10px;
       }
       .text {
         display: inline-block;
