--- a/client/src/HelpWidget/Help.scss
+++ b/client/src/HelpWidget/Help.scss
@@ -1,12 +1,51 @@
 :local(.Help) {
-  position: absolute;
-  bottom: 0;
-  height: 50px;
-  width: 100%;
-  margin: -50px auto 0;
-  text-align: left;
-  font: 10px/12px sans-serif;
+  position: fixed;
+  bottom: 10%;
+  top: 10%;
+  width: 280px;
   box-sizing: border-box;
-  padding: 3px 0 0 0;
-  border-top: 1px solid #eeeeee;
+  text-align: left;
+  font: 12px/14px sans-serif;
+  box-sizing: border-box;
+  padding: 20px;
+  border-radius: 0 10px 10px 0;
+  border-top: 1px solid #e9f1fa;
+  border-right: 1px solid #e9f1fa;
+  border-bottom: 1px solid #e9f1fa;
+  left: -280px;
+  transition: left .8s ease;
+  background: #eff5fb;
+  z-index: 10;
+  &:hover {
+    left: 0;
+  }
+  .qm {
+    position: absolute;
+    box-sizing: border-box;
+    width: 50px;
+    height: 50px;
+    top: 50%;
+    left: 279px;
+    transform: translateY(-50%);
+    border-radius: 0 7px 7px 0;
+    border-top: 1px solid #e9f1fa;
+    border-right: 1px solid #e9f1fa;
+    border-bottom: 1px solid #e9f1fa;
+    z-index: 10;
+    cursor: pointer;
+    background: #eff5fb url("./qm.png") center center no-repeat;
+    background-size: 30px 30px;
+  }
+  .inner {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    bottom: 10px;
+    right: 10px;
+    overflow: scroll;
+    img {
+      margin: 5px;
+      border-radius: 7px;
+    }
+  }
 }
