--- a/client/src/SeaWidget/Sea.scss
+++ b/client/src/SeaWidget/Sea.scss
@@ -1,6 +1,9 @@
 :local(.Sea){
   display: inline-block;
-  margin: 0 20px 20px;
+  margin: 0 15px 20px;
+  @media (min-width: 780px) {
+    margin: 0 20px 20px;
+  }
   h3{
     margin: 5px auto 15px;
     text-align: center;
