fix issue with long messages, minor changes in server and bot

--- a/client/src/ChatWidget/Chat.scss
+++ b/client/src/ChatWidget/Chat.scss
@@ -47,6 +47,9 @@
       }
       .text {
         display: inline-block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 100%;
         &.hit {
           color: #d16b00;
         }
