--- a/client/src/HeaderWidget/Header.scss
+++ b/client/src/HeaderWidget/Header.scss
@@ -108,6 +108,7 @@
       color: white;
       margin: 0 0 10px 0;
       display: inline-block;
+      user-select: none;
       &:hover {
         background: rgba(#5784bf, .8);
       }
