--- a/client/src/CreateGameWidget/CreateGame.scss
+++ b/client/src/CreateGameWidget/CreateGame.scss
@@ -10,6 +10,7 @@
   font: 20px/25px sans-serif;
   cursor: pointer;
   transition: background .8s linear .2s;
+  user-select: none;
   &:hover {
     background: rgba(#5784bf, .8);
   }
