--- a/client/src/AreYouSurePopupWidget/AreYouSurePopup.module.scss
+++ b/client/src/AreYouSurePopupWidget/AreYouSurePopup.module.scss
@@ -1,4 +1,4 @@
-:local(.InviteBotPopup) {
+.AreYouSurePopup {
   position: fixed;
   top: 0;
   left: 0;
@@ -34,13 +34,10 @@
       margin: 0 0 10px;
       width: 200px;
     }
-    .error {
-      font: 10px/12px sans-serif;
-      color: #d16b00;
-    }
     .button {
+      display: inline-block;
       box-sizing: border-box;
-      width: 100%;
+      width: 48%;
       font: 12px/30px sans-serif;
       padding: 5px 0;
       border-radius: 7px;
@@ -50,7 +47,6 @@
       transition: background .8s linear .2s;
       color: white;
       margin: 10px 1% 0;
-      user-select: none;
       &:hover {
         background: rgba(#5784bf, .8);
       }
