--- a/client/src/InviteBotPopupWidget/InviteBotPopup.module.scss
+++ b/client/src/InviteBotPopupWidget/InviteBotPopup.module.scss
@@ -1,4 +1,4 @@
-:local(.AreYouSurePopup) {
+.InviteBotPopup {
   position: fixed;
   top: 0;
   left: 0;
@@ -34,10 +34,13 @@
       margin: 0 0 10px;
       width: 200px;
     }
+    .error {
+      font: 10px/12px sans-serif;
+      color: #d16b00;
+    }
     .button {
-      display: inline-block;
       box-sizing: border-box;
-      width: 48%;
+      width: 100%;
       font: 12px/30px sans-serif;
       padding: 5px 0;
       border-radius: 7px;
@@ -47,6 +50,7 @@
       transition: background .8s linear .2s;
       color: white;
       margin: 10px 1% 0;
+      user-select: none;
       &:hover {
         background: rgba(#5784bf, .8);
       }
